Issue #5067: improve some json error messages. Patch by Serhiy Storchaka.